[package]
name = "haus"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "haus"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
mpl-core = { version = "0.9.1", features = ["anchor"] }
mpl-token-metadata = "5.1.0"
proc-macro2 = "1.0.94"
session-keys = { version = "2.0.7", features = ["no-entrypoint"] }
solana-security-txt = "1.1.1"
